assets/css/styles.css
/* ... */
#nav-toggle:checked~nav {
    display: block;
    background-color: var(--color-bg);


}



/* UL nav menu*/
#menu li {
    text-align: center;
    width: 50%;
    margin: 15px auto;
    border: 1px solid var(--color-black-purple);
    border-radius: 5px;


}



#menu a {
    padding: 8px 40px;
    color: var(--color-black-purple);
}

#menu a.active {
    color: var(--color-accent);
}

#menu li:hover {

    background-color: var(--color-black-purple);
    border-radius: 5px;
    ;
}

#menu li:hover a {
    color: var(--color-bg);

}

.fix-width {
    max-width: 1850px;
}

/*****************************
MAIN for Each Page
******************************/

/*MAIN general for all pages*/
main {
    grid-area: main;
    margin-top: 60px;
    /****DEBUG REMOVE*******/
    border: solid rgb(242, 10, 10) 10px;

}

/*********Index Main Elements ***************/
/*Top section element*/

#intro,
#treatments-intro {
    position: relative;
    padding: 1px;
    height: 140px;
    background: url("../images/reception.webp") no-repeat center center/cover;
}



/*Treatment Page Main*/

#treatments-intro {
    background: url("../images/massage-beds.webp") no-repeat center center/cover;
}

#reception,
.treatment-bg {
    position: absolute;
    height: 47px;
    background-color: rgba(39, 27, 41, 0.3);
    margin: 0;
    left: 0;
    bottom: 0;

}

#reception h1,
.treatment-bg h1 {
    position: absolute;
    margin: 0;
    padding-left: 1px;
    top: 5px;
    left: 0;
    text-shadow: 0 2px 3px var(--color-black-purple);
}

/**Welcome Section Index page***/

#welcome {
    margin-top: 60px;
}

.welcome-Oasis {
    color: var(--color-prime);

}



.welcome-Oasis h2,
.welcome-Oasis p {
    font-size: 1rem;
}

.welcome-Oasis h2 {
    font-size: 1.7rem;
}

.welcome-Oasis p {
    letter-spacing: 1px;
}

.unwind {
    position: relative;
    background: url("../images/unwind-bg.webp") no-repeat center center/cover;
    height: 175px;
}

.unwind-text {
    position: absolute;
    top: -8px;
    right: 2px;
    bottom: 36px;
    background-color: var(--color-prime);
    width: 150px;
    height: 150px;
    border-radius: 50%;
    padding-left: 23px;
    padding-top: 26px;
    font-size: 0.980rem;
    box-shadow: 0 1px 6px 0px var(--color-dark-grey);
    letter-spacing: 1px;
}


/***Treatment Section Index page****/
.explore-menu,
.rejuvenate {
    color: var(--color-black-purple);
    font-size: 1.8rem;
    max-width: 934px;
}

.towels img {
    opacity: 0.4;
}


#treatments h2 {
    color: var(--color-accent);
    font-size: 2rem;
    letter-spacing: 4px;
    padding-left: 3px;
}

.experts {
    background: linear-gradient(rgba(178, 62, 81, 0.6), rgba(178, 62, 81, 0.6)), url("../images/rose-massage-bed.webp") no-repeat center center/cover;
    margin-bottom: 0;
    height: 300px;
    padding-top: 10px;
}

.experts p {
    width: 85%;
    max-width: 1150px;
    margin: 0 auto 20px;
    line-height: 25px;
    font-size: 1.2rem;
}




/**********Treatment Main Page*********/
.rejuvenate {
    color: var(--color-accent);
    margin: 25px auto 10px;
}

.escape-container {
    background: var(--color-dark-grey);
    padding: 10px 0;
}

.escape {
    padding: 20px 0;
    max-width: 1000px;
}

#massages,
#facial-treatments {
    position: relative;
    top: -16px;
}

#massages {
    top: -16px;
    padding-bottom: 20px;

}




.massages {
    position: relative;
    max-width: 320px;
}

.hot-stone,
.couple {
    margin-top: 10px;
}


.swedish,
.hot-stone,
.couple {
    height: 457px;
}

.facial,
.mud,
.mask {
    height: 375px;
}

.swedish h2,
.hot-stone h2,
.couple h2,
.facial h2,
.mud h2,
.mask h2 {
    position: absolute;
    top: -20px;
    padding-left: 5px;
    background: rgba(132, 132, 147, 0.7);
}

.facial-heading {
    background: var(--color-black-purple);
    margin: 0;
    margin-top: 20px;
}

.swedish p,
.hot-stone p,
.couple p,
.facial p,
.mud p,
.mask p {
    position: absolute;
    width: 75%;
    padding: 8px 15px;
    padding-bottom: 50px;
    border-radius: 10px;
}



.massages a {
    position: absolute;
    width: 100px;
    padding: 5px 10px;
    font-size: 1.3rem;
    border-radius: 5px;
    background: var(--color-bg);
    box-shadow: 0 2px 5px 0 var(--color-black-purple);
}

.swedish p {
    top: 147px;
    right: 3px;
    background: var(--color-light-grey);
}

.swedish a,
.couple a {
    color: var(--color-dark-grey);
    bottom: 8px;
    left: 15px;
}


.hot-stone h2 {
    background: rgba(197, 132, 90, 0.7);
}

.couple h2 {
    background: rgba(178, 62, 81, 0.7);
}

.facial h2,
.mud h2,
.mask h2 {
    background: rgba(39, 27, 41, 0.7);
}

.hot-stone p {
    background: var(--color-prime);
    top: 165px;
    left: 3px;
}

.couple p {
    background: var(--color-accent);
    top: 179px;
    right: 3px;
}

.facial p,
.mud p,
.mask p {
    background: var(--color-black-purple);
    top: 185px;
}

.facial p,
.mask p {
    left: 3px;
}


.mud p {
    right: 3px;
}

.hot-stone a {
    color: var(--color-prime);
    bottom: 42px;
    right: 41px;
}

.couple a {
    color: var(--color-accent);
    bottom: 16px;
}

.facial a,
.mud a,
.mask a {
    background: var(--color-accent);
    color: var(--color-bg);
}

.facial a,
.mask a {
    bottom: 47px;
    right: 41px;
}


.mud a {
    bottom: 20px;
    left: 24px;
}


.mask a {
    bottom: 27px;
}


/*********BOOKING Main PAGE***************/
#booking-form {
    position: relative;
    top: -9px;

}




#booking-form h1 {
    background: linear-gradient(var(--color-prime), var(--color-accent) 24%, var(--color-black-purple) 87%);
    margin: 0;
    padding: 1em 0;
    font-size: 1.8em;
    text-shadow: 0 1px 2px var(--color-light-grey);
}
/* ... */

